--- a/src/main/webapp/error/400.jspx
+++ b/src/main/webapp/error/400.jspx
@@ -3,16 +3,16 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:tmf="urn:jsptagdir:/WEB-INF/tags/tmf"
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0"
-    expires="120" type="text/html" language="client" postprocessor="none">
+    expires="60" type="text/html" language="client" postprocessor="none">
 <jsp:output doctype-root-element="html"
       doctype-public="-//W3C//DTD XHTML 1.0 Strict//EN"
       doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" />
-<jsp:scriptlet>response.setStatus(404);</jsp:scriptlet>
+<jsp:scriptlet>response.setStatus(400);</jsp:scriptlet>
 <mm:cloud>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl">
 <head>
-  <title>Page Not Found - Tactical Media Files</title>
+  <title>Bad Request - Tactical Media Files</title>
   <meta name="description" content="Tactical Media Files" />
   <meta name="keywords" content="" />
   <meta name="robots" content="all" />
@@ -28,18 +28,17 @@
   <tmf:top-container />
   <div class="ArticleContainer">
 	
-	<tmf:header-simple title="404 - Page not found" />
+	<tmf:header-simple title="400 - Bad request" />
     
     <h3><jsp:expression>org.mmbase.Version.get()</jsp:expression></h3>
-    <p>The current URL -
+    <p>
       <jsp:scriptlet>
         String msg = (String) request.getAttribute("org.mmbase.servlet.error.message");
         if (msg == null) {
           msg = (String) request.getAttribute("javax.servlet.error.message");
         }
-        out.println(msg);
+        if (msg != null) out.println(msg);
       </jsp:scriptlet>
-      - does not point to an existing resource in this web-application.
       <br /><a href="${mm:link('/')}">home</a>
     </p>
 
