--- a/src/main/webapp/edit/index.jspx
+++ b/src/main/webapp/edit/index.jspx
@@ -4,12 +4,12 @@
     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0"
     xmlns:tmf="urn:jsptagdir:/WEB-INF/tags/tmf"
-    expires="120" type="text/html"
+    expires="0" type="text/html"
     language="client">
 <jsp:output doctype-root-element="html"
       doctype-public="-//W3C//DTD XHTML 1.1//EN"
       doctype-system="http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd" />
-<mm:cloud method="http" logon="admin" >
+<mm:cloud method="http" rank="basic user">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -44,7 +44,8 @@
 <h1 class="Title">TMF Editors</h1>
 <p>
   <a href="${mm:link('/edit/')}">editors</a> |
-  <a href="${mm:link('videos.jspx')}">video editors</a>
+  <a href="${mm:link('videos.jspx')}">video editors</a> |
+  you are <mm:cloudinfo type="user" /> (<mm:cloudinfo type="rank" />)
 </p>
 <table width="700">
 <tr>
