--- a/src/main/webapp/edit/videos.jspx
+++ b/src/main/webapp/edit/videos.jspx
@@ -9,7 +9,7 @@
 <jsp:output doctype-root-element="html"
       doctype-public="-//W3C//DTD XHTML 1.1//EN"
       doctype-system="http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd" />
-<mm:cloud method="http" rank="basic user">
+<mm:cloud loginpage="/edit/login.jspx" rank="basic user">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -17,8 +17,8 @@
 
   <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf.css')}" />
   <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf2.css')}" />
-  <link rel="icon" href="${mm:link('/mmbase/style/images/favicon.ico')}" type="image/x-icon" />
-  <link rel="shortcut icon" href="${mm:link('/mmbase/style/images/favicon.ico')}" type="image/x-icon" />
+  <link rel="icon" href="${mm:link('/favicon.ico')}" type="image/x-icon" />
+  <link rel="shortcut icon" href="${mm:link('/favicon.ico')}" type="image/x-icon" />
   <style type="text/css">
     body { padding: 1em; }
     .logo { 
@@ -35,8 +35,10 @@
   <p>
     <a href="${mm:link('/edit/')}">editors</a> |
     <a href="${mm:link('videos.jspx')}">video editors</a> |
+    <a href="${mm:link('logout.jspx')}">logout</a> |
     you are <mm:cloudinfo type="user" /> (<mm:cloudinfo type="rank" />)
   </p>
+
 
   
   <mm:import id="referrer">/edit/index.jspx</mm:import>
