analytics in picture

--- a/src/main/webapp/picture.jspx
+++ b/src/main/webapp/picture.jspx
@@ -104,6 +104,8 @@
 		  <br /><br />
 		</div>								
   	  </div><!-- EOF .PictureContainer --></div>
+      
+      <tmf:googleanalytics />
 
 </body>
 </html>
