meta keywords and description

--- a/src/main/webapp/video.jspx
+++ b/src/main/webapp/video.jspx
@@ -68,6 +68,23 @@
         margin: 0;
       }
       </style>
+
+      <mm:escaper id="wrapper" type="substring">
+        <mm:param name="from" value="0" />
+        <mm:param name="to" value="254" />
+        <mm:param name="ellipsis" value="..." />
+      </mm:escaper>
+      <mm:relatednodescontainer type="keyword" searchdirs="destination" role="related">
+        <mm:relatednodes>
+          <c:set var="keywords"><mm:field name="keyword" /><mm:first inverse="true">, </mm:first>${keywords}</c:set>
+        </mm:relatednodes>
+      </mm:relatednodescontainer>
+      <mm:import id="meta_description"><mm:field name="description" escape="wrapper,text/html/attribute" /></mm:import>
+      <c:if test="${!empty meta_description}"><meta name="description" content="${mm:escape('text/html/attribute',meta_description)}" /></c:if>
+      <c:if test="${!empty keywords}">
+         <meta name="keywords" content="${keywords}" />
+      </c:if>
+
     </jsp:attribute>
 
     <jsp:attribute name="body">
