new tasks for favicon, icons

--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -3,7 +3,7 @@
 @import "core/base";
 @import "core/fonts";
 @import "core/grid";
-//@import "core/icons";
+@import "core/icons";
 @import "core/normalize";
 @import "core/typography";
 @import "core/variables";
@@ -18,7 +18,10 @@
 
 // Components
 // -------------------------------
-@import "components/lead";
+@import "lib/slick-slider";
+@import "components/carousel";
+@import "components/readmore";
+@import "components/selector";
 
 // Modules
 // -------------------------------
