carousel for homepage, most of styling, icons in font for carousel (still incorrect, will change for svg)

--- a/frontend/source/less/core/base.less
+++ b/frontend/source/less/core/base.less
@@ -28,10 +28,13 @@ html {
     margin: 0;
     cursor: default;
 
-    @media (min-width: 1260px) {
+    @media @screen-sm-max {
+        font-size: 7px;
+    }
+    // in between is base size 8px
+    @media @screen-lg {
         font-size: 10px;
     }
-
     @media @screen-xl {
         font-size: 12px;
     }
