--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -18,11 +18,11 @@
 
 // Components
 // -------------------------------
-@import "lib/slick-slider";
-@import "components/carousel";
 @import "components/readmore";
 @import "components/selector";
 
 // Modules
 // -------------------------------
 //@import "modules/article";
+@import "lib/slick-slider";
+@import "modules/carousel";
