--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -5,6 +5,7 @@
 block variables
     - var title = title ? ( title + " - TMF" ) : "TMF";
     - var bodyClass = bodyClass || "";
+    - var mainClass = mainClass || "";
 
 doctype html
 html
