--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -8,7 +8,7 @@
 // Black & white
 @color-black:                       #000;
 @color-white:                       #fff;
-@color-white-transparent:           fade(@color-white, 90%);
+@color-white-transparent:           fade(@color-white, 60%);
 @color-grey:                        #EFEFEF;
 
 // Grey
@@ -28,7 +28,7 @@
 
 // Font sizes
 @font-extra-small:                  1.2rem;
-@font-small:                        1.6rem;
+@font-small:                        1.4rem;
 @font-medium:                       1.8rem;
 @font-base:                         2rem;
 @font-large:                        2.4rem;
@@ -97,3 +97,19 @@
 @screen-md-max:               ~'(max-width: 767px)';
 @screen-lg-max:               ~'(max-width: 1023px)';
 @screen-xl-max:               ~'(max-width: 1680px)';
+
+
+// Z-indexes
+// -------------------------------
+
+@lift-10:                           1;
+@lift-20:                           2;
+@lift-30:                           3;
+@lift-40:                           4;
+@lift-50:                           5;
+@lift-60:                           6;
+@lift-70:                           7;
+@lift-80:                           8;
+@lift-90:                           9;
+@lift-100:                          10;
+@lift-max:                          9999;
