--- a/frontend/source/less/layout/footer.less
+++ b/frontend/source/less/layout/footer.less
@@ -8,6 +8,7 @@
 
 	.footer-inner {
 		line-height: @line-height--medium;
+		font-size: @font-small;
 
 		@media @screen-sm-max {
 			height: auto;
@@ -21,7 +22,7 @@
 		}
 
 		.footer__link {
-			color: @color-secondary;
+			color: @color-grey--20;
 			font-size: @font-small;
 			text-decoration: none;
 			font-weight: 200;
