--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -1,17 +1,17 @@
 .header {
-	position: relative;
+	z-index: @lift-20;
+	position: absolute;
 	width: 100%;
-    min-height: 4.6rem;
+    height: 3.6rem;
     
 	.container {
 	    display: flex;
 	    align-items: center;
-
 	}
 
 	.header__logo {
-	    width: 18rem;
-	    margin: 1rem;
+	    width: 16rem;
+	    margin: 0.8rem 0;
 	}
 
 	p { 
@@ -19,10 +19,11 @@
 		text-align: right;
 		strong {
 			font-family: @font-secondary;
-			font-size: @font-base;
+			font-size: @font-small;
 			text-transform: uppercase;
+		    letter-spacing: 0.2rem;
 			color: @color-white;
-			text-shadow: 0.2rem 0.2rem @color-grey--50;
+			text-shadow: 0.1rem 0.1rem 0.2rem @color-grey--50;
 		}
 	}
 
