--- a/frontend/source/less/layout/main-content.less
+++ b/frontend/source/less/layout/main-content.less
@@ -10,6 +10,7 @@
         margin-top: 6rem;
         color: @color-primary;
         font-family: @font-secondary;
+        font-style: italic;
         text-transform: lowercase;
         text-align: center;
     }
