position icons on slider, few new ones

--- a/frontend/source/less/core/icons.less
+++ b/frontend/source/less/core/icons.less
@@ -30,7 +30,10 @@
     @chevron-down: "\E001";
     @chevron-left: "\E002";
     @chevron-right: "\E003";
-    @slider-dot: "\E004";
+    @chevron-up: "\E004";
+    @close: "\E005";
+    @home: "\E006";
+    @slider-dot: "\E007";
     
     content: @@filename;
 }
@@ -60,7 +63,19 @@
     content: "\E003";
 }
 
-.icon-slider-dot:before {
+.icon-chevron-up:before {
     content: "\E004";
+}
+
+.icon-close:before {
+    content: "\E005";
+}
+
+.icon-home:before {
+    content: "\E006";
+}
+
+.icon-slider-dot:before {
+    content: "\E007";
 }
 
