--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -23,6 +23,11 @@ append main
                 type : 'article', 
                 url : '#', 
                 image: 'styles/images/Nuit_Debout_16.jpg'
+            }, {
+                title : 'NRA and Smith & Wesson Partner to "Share the Safety" With All Americans', 
+                type : 'article', 
+                url : '#', 
+                image: 'styles/images/occupy-sandy-banner-we-the-people.jpg'
             })
 
     .container
