overlays for topics and collections

--- a/frontend/source/less/layout/page-layout.less
+++ b/frontend/source/less/layout/page-layout.less
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    position: relative;
 }
 
 .page-layout__header {
@@ -14,6 +15,7 @@
     padding: 0 0 7rem 0;
     flex: 1 0 auto;
     //display: flex;
+
 }
 
 .page-layout__footer {
@@ -21,4 +23,10 @@
     position: relative;
     //flex: 1 0 auto;
     //display: flex;
+}
+
+.list {
+    .header {
+        display: none;
+    }
 }
