--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -15,6 +15,7 @@
 @import "layout/main-content";
 @import "layout/navigation";
 @import "layout/page-layout";
+@import "layout/overlay";
 
 // Components
 // -------------------------------
