--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -2,9 +2,9 @@ nav.navigation
     .container
         .row
             .col-md-2
-                a( href="topics" data-select-topics ) Topics
+                a( href="#topics" data-select-topics ) Topics
             .col-md-2
-                a( href="collections" data-select-collections ) Collections
+                a( href="#collections" data-select-collections ) Collections
             .col-md-4
                 form.navigation__search( action="list.html" )
                     label( for="search" hidden ) Search
