--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -36,3 +36,6 @@ html
                 include footer
 
             script( src=config.paths.assets.js+"/main.js" )
+            
+            .overlay
+                block overlay
