--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -7,6 +7,7 @@
 
 // Black & white
 @color-black:                       #000;
+@color-black-transparent:           fade(@color-black, 85%);
 @color-white:                       #fff;
 @color-white-transparent:           fade(@color-white, 60%);
 @color-grey:                        #EFEFEF;
