--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -3,7 +3,7 @@ extends layout/page
 include modules/carousel
 
 prepend variables
-    - bodyClass = 'homepage'
+    - bodyClass = 'home'
     - mainClass = '___no-padding';
 
 append main
@@ -63,4 +63,59 @@ append main
                     a( href="#" ) Economics
 
             .col-md-2
+
+append overlay
+    .overlay-content
+        .container.topics
+            .row
+                .col-md-12
+                    h2 Topics
+                    ul.alphabet
+                        each val in ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"]
+                            li 
+                                a( href=val ) #{val}
+
+            .row
+                .col-md-2
+                .col-md-8
+                    ul.items
+                        each val in ["9/11", "accident", "act up", "activism", "AIDSaids", "Al Jazeera", "amsterdam", "anarchist", "bookfair 2010", "anonymous", "archiveart", "art of campaigning", "austerity", "Austria", "avantgarde", "avatar"]
+                            li
+                                a( href=val ) #{val}                
+                
+                .col-md2
+
+
+        .container.collections
+            .row
+                .col-md-2
+                .col-md-8
+                    h2 Collections
+                    ul
+                        li 
+                            em Anna Devon
+                            h3 
+                                a( href="#" ) So called gun safety
+                        li
+                            em Mike Lanning
+                            h3 
+                                a( href="#" ) There’s no such thing as free beer
+                        li
+                            em Kurt Geiger
+                            h3 
+                                a( href="#" ) The right to be offended
+                        li
+                            em Fran Fanny
+                            h3 
+                                a( href="#" ) East-west parallels
+                        li
+                            em Lady Gaga
+                            h3 
+                                a( href="#" ) Confusing unrealities
+                        li
+                            em Mister X
+                            h3 
+                                a( href="#" ) Now I’m out of collection titles
+
+                .col-md-2
 
