--- a/frontend/source/less/core/base.less
+++ b/frontend/source/less/core/base.less
@@ -63,3 +63,16 @@ a {
     color: @color-secondary;
     text-decoration: none;
 }
+
+#skip-link {
+    position: absolute;
+    top: 0;
+    right: 100%;
+    background-color: @color-white;
+    padding: 0.5rem 1rem;
+    
+    &:focus {
+        right: auto;
+        z-index: 9;
+    }
+}
